# etherblocks

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
app/: AppSettings.cpp  AppSettings.hpp  Application.cpp  Application.hpp  BlockAssets.cpp  BlockAssets.hpp  CMakeLists.txt  GameMenu.cpp  GameMenu.hpp  SceneRendering.cpp  SceneRendering.hpp  WorldPersistence.cpp  WorldPersistence.hpp  main.cpp
assets/blocks/: manifest.json
assets/config/: settings.json
cmake/: AddCustomCommandOrTest.cmake  Doxyfile.in  etherblocksConfig.cmake.in  version.hpp.in
docs/: mainpage.dox
include/etherblocks/: Buffer.hpp  Camera.hpp  Framebuffer.hpp  Input.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Utils.hpp  VertexArray.hpp  Window.hpp  etherblocks.hpp
include/etherblocks/detail/: GlContext.hpp  GlObject.hpp
include/etherblocks/engine/: Camera.hpp  WorldChunks.hpp  WorldRendering.hpp
include/etherblocks/engine/graphics/: Buffer.hpp  Framebuffer.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/etherblocks/engine/graphics/detail/: GlObject.hpp
include/etherblocks/engine/ui/: UiLayer.hpp
include/etherblocks/game/: Player.hpp  Raycast.hpp  World.hpp
include/etherblocks/system/: FrameClock.hpp  Input.hpp  Logger.hpp  Utils.hpp  Window.hpp
include/etherblocks/system/detail/: GlContext.hpp
shaders/: basic.fragment.glsl  basic.vertex.glsl  crosshair.fragment.glsl  crosshair.vertex.glsl  ui.fragment.glsl  ui.vertex.glsl  ui_image.fragment.glsl  ui_image.vertex.glsl
src/: Buffer.cpp  CMakeLists.txt  Camera.cpp  Framebuffer.cpp  Input.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Utils.cpp  VertexArray.cpp  Window.cpp
src/detail/: GlContext.cpp  GlObject.cpp
src/engine/: Camera.cpp  WorldChunks.cpp  WorldRendering.cpp
src/engine/graphics/: Buffer.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/engine/graphics/detail/: GlObject.cpp
src/engine/ui/: UiLayer.cpp
src/game/: Player.cpp  Raycast.cpp  World.cpp
src/system/: FrameClock.cpp  Input.cpp  Logger.cpp  Utils.cpp  Window.cpp
src/system/detail/: GlContext.cpp
tests/: CMakeLists.txt  CameraTests.cpp  FrameClockTests.cpp  RaycastTests.cpp  WorldRenderingTests.cpp  WorldTests.cpp  ut_main.hpp
